# SpecCircuit

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  add_mem4_snake_gold_cgra_out.txt  add_snake_gold_cgra_out.txt  binop_tb.v  cmd.tcl  conv_2_1_cgra.v  conv_2_1_gold_cgra_out.txt  conv_3_1_cgra.v  conv_3_1_gold_cgra_out.txt  conv_bw_cgra.v  conv_bw_gold_cgra_out.txt  conv_bw_travis_cgra.v  harris6_reordered_gold_cgra_out_100000.txt  mul_2_cgra.json  mul_2_cgra.v  pe_tb_x2.v  pre_specialized_conv_2_1.json  remove_bsa_extra_lines.sh  run_travis.sh  vcs_run_cgra_tb.sh
benchmarks/: create_tb.py  main.cpp  process_tb_times.py  specialize_bitstream.cpp  test.v  test_add_mem_snake.v  test_add_snake.v  test_conv_1_2.v  test_conv_3_1.v  test_conv_bw.v  test_no_reset.v  x_prop_test.v
benchmarks/cgra_dev_no_mdll_05_15_2018/: DW_tap.v  memory_core_unq1.v
benchmarks/cgra_test_harris_07_22_2018/: cb_unq1.v  cb_unq2.v  cfg_and_dbg_unq1.sv  cfg_ifc_unq1.sv  fifo_control_unq1.v  flop_unq1.sv  flop_unq2.sv  flop_unq3.sv  global_controller_unq1.sv  input_sr_unq1.v  io16bit_unq1.v  io1bit_unq4.v  jtag_unq1.sv  linebuffer_control_unq1.v  mdll_top.sv  memory_core_unq1.v  memory_tile_unq1.v  output_sr_unq1.v  pe_tile_new_unq1.sv  sb_unq1.v  sb_unq2.v  sb_unq3.v  tap_unq1.sv  template_ifc_unq1.sv  test_lut.sv  test_pe_comp_unq1.sv  test_pe_unq1.sv  test_shifter_unq1.sv
jitted_utils/: static_bv_wrapper.h
src/: algorithm.h  analysis.cpp  analysis.h  circuit.cpp  circuit.h  convert_coreir.cpp  convert_coreir.h  cpp_utils.cpp  cpp_utils.h  ir.cpp  ir.h  output_verilog.cpp  output_verilog.h  serialize.cpp  serialize.h  simulator.cpp  simulator.h  transformations.cpp  transformations.h  utils.cpp  utils.h  value_store.cpp  value_store.h
test/: add_mem4_snake_only_config_lines.bsa  add_snake_only_config_lines.bsa  cb_unq1.json  cgra_tests.cpp  compare_to_iverilog.cpp  constant_folding_benchmark.cpp  conv_1_2_only_config_lines.bsa  conv_2_1.bsa  conv_2_1_only_config_lines.bsa  conv_3_1.bsa  conv_3_1_only_config_lines.bsa  conv_3_1_only_point_lines.bsa  conv_bw.bsa  conv_bw_only_config_lines.bsa  conv_bw_travis_only_config_lines.bsa  harris6_reordered.bsa  hwmaster_pw2_sixteen.bsa  load_tests.cpp  mem_unq1.json  op_tests.cpp  pe_tile_new_unq1.json  test_circuit.cpp  utils.cpp  utils.h
